--- a/12_flask-jinja/templates/model_tmplt.html
+++ b/12_flask-jinja/templates/model_tmplt.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<!-- 
-  Clyde 'Thluffy' Sinclair
+<!--
+  Team Polar: Rachel Xiao (Mooana), Yuqing Wu (Zero), Jesse Xie (Polly)
   SoftDev
-  Oct 2021
+  K12: ...or The Only Constant is Change?
+  2021-10-07
  -->
 
 <html>
@@ -19,4 +20,3 @@
   </body>
 
 </html>
-
