edited display on webpage

--- a/13_tempwork/templates/tablified.html
+++ b/13_tempwork/templates/tablified.html
@@ -9,7 +9,7 @@
  <html>
 
    <head>
-     <title> {{ foo }} </title>
+     <title> Occupation Chooser </title>
    </head>
 
    <body>
@@ -19,7 +19,7 @@
       K13 -- Template for Success <br>
       2021-10-08 </h2>
 
-      <h1> {{ selected_occupation}} <h1>
+      <h1 style="background-color: #e5ecff;"> Random Occupation: {{ selected_occupation}} <h1>
       <h1> {{ occupation }} </h1>
 
      <table border="1">
