added descriptive heading

--- a/13_tempwork/templates/tablified.html
+++ b/13_tempwork/templates/tablified.html
@@ -14,6 +14,7 @@
 
    <body>
      <h1> Using Weighted Percentages to Choose a Random Occupation and Display the Data for the Occupations </h1>
+     <h3> Refresh the page to display a newly-chosen occupation with a link on how to get started with it that is randomly chosen based on its weighted percentage </h3>
      <h2> Team KingMlob: Liesel Wong, Yaying Liang, Rachel Xiao (Duckies: King Hagrid, Blob, and Mooana) <br>
       SoftDev <br>
       K13 -- Template for Success <br>
