fixed heading and printing of request method used

--- a/14_form/templates/login.html
+++ b/14_form/templates/login.html
@@ -24,10 +24,10 @@
 
   <body>
     <h1>
-      Team Marshmallow: Liesel Wong (King Hagrid), Yoonah Chang (Yelena), Rachel Xiao (Mooana)
-      SoftDev
-      K14 -- Form and Function
-      2021-10-14
+      Team Marshmallow: Liesel Wong (King Hagrid), Yoonah Chang (Yelena), Rachel Xiao (Mooana)<br>
+      SoftDev<br>
+      K14 -- Form and Function<br>
+      2021-10-14<br>
       <br><br>
       Welcome, Travelers of the Intertoobz!
     </h1>
