--- a/14_form/templates/response.html
+++ b/14_form/templates/response.html
@@ -13,17 +13,16 @@
     <title> RESPONSE PAGE </title>
   </head>
   <h1>
-    Team Marshmallow: Liesel Wong (King Hagrid), Yoonah Chang (Yelena), Rachel Xiao (Mooana)
-    SoftDev
-    K14 -- Form and Function
-    2021-10-14
+    Team Marshmallow: Liesel Wong (King Hagrid), Yoonah Chang (Yelena), Rachel Xiao (Mooana)<br>
+    SoftDev<br>
+    K14 -- Form and Function<br>
+    2021-10-14<br>
     <br> <br>
     Waaaa hooo HAAAH <br>
     Ni Hao {{ username }}! Welcome to the Marshma<b>SHOW</b> :)) It's time to PARTY
   </h1>
   <p>
-    request.args['username'] is used to access the user's inputted username <br>
-    Request Method: &lt;Request 'http://127.0.0.1:5000/auth?username={{ username }}&sub1=Submit+Query' [GET]&gt;
+    Request Method: {{ method }}
   </p>
 
   <br>
