checked if login failed

--- a/15_session/templates/login.html
+++ b/15_session/templates/login.html
@@ -37,10 +37,16 @@
       Enter your username below to proceed.
     </h3>
     <form action="/auth">
+      <label>Username:</label>
       <input type="text" name="username">
+      <br>
+      <label>Password:</label>
+      <input type="text" name="password">
+      <br>
       <input type="submit" name="sub1">
     </form>
     <br>
+    <p style="color:red;">{{ explain }}</p>
   </body>
 
 </html>
