updated welcome page

--- a/15_session/templates/response.html
+++ b/15_session/templates/response.html
@@ -18,12 +18,23 @@
     K15 -- Sessions Greetings<br>
     2021-10-18<br>
     <br> <br>
-    Waaaa hooo HAAAH <br>
-    Ni Hao {{ username }}! Welcome to the Marshma<b>SHOW</b> :)) It's time to PARTY
+    Hi {{ username }}!! You have successfully logged in
+    <pre>
+    $$$$         $$$$
+  $$$$$$$$     $$$$$$$$
+ $$$$$$$$$$$$ $$$$$$$$$$$
+$$$$$$$$$$$$$$$$$$$$$$$$$$
+$$$$$$$$$$$$$$$$$$$$$$$$$$
+ $$$$$$$$$$$$$$$$$$$$$$$$
+  $$$$$$$$$$$$$$$$$$$$$$
+   $$$$$$$$$$$$$$$$$$$
+       $$$$$$$$$$$$$
+          $$$$$$$
+            $$$
+             $
+    </pre>
+
   </h1>
-  <p>
-    Request Method: {{ method }}
-  </p>
 
   <br>
   <body>
