--- a/15_session/templates/response.html
+++ b/15_session/templates/response.html
@@ -14,11 +14,8 @@
   </head>
   <h1>
     Team Marshmallow: Liesel Wong (King Hagrid), Yoonah Chang (Yelena), Rachel Xiao (Mooana)<br>
-    SoftDev<br>
-    K15 -- Sessions Greetings<br>
-    2021-10-18<br>
     <br> <br>
-    Hi {{ username }}!! You have successfully logged in
+    Hi {{ username }}!! You are logged in :))
     <pre>
     $$$$         $$$$
   $$$$$$$$     $$$$$$$$
@@ -28,13 +25,16 @@ $$$$$$$$$$$$$$$$$$$$$$$$$$
  $$$$$$$$$$$$$$$$$$$$$$$$
   $$$$$$$$$$$$$$$$$$$$$$
    $$$$$$$$$$$$$$$$$$$
-       $$$$$$$$$$$$$
-          $$$$$$$
+      $$$$$$$$$$$$$$
+         $$$$$$$$
             $$$
              $
     </pre>
 
   </h1>
+  <form action="/logout">
+    <input type="submit" value="Logout">
+  </form>
 
   <br>
   <body>
