--- a/18_css/2_external/style.css
+++ b/18_css/2_external/style.css
@@ -1,3 +1,9 @@
+/* Wandering Wolverine: Rachel Xiao, Wen Hao Dong
+   SoftDev pd2
+   K18 -- CSS basics
+   2021-11-23
+   time spent: 1 hour*/
+
 body {
   font-family: arial;
   background-color: rgb(114, 114, 114);
