--- a/19_api/templates/main.html
+++ b/19_api/templates/main.html
@@ -2,7 +2,7 @@
 SoftDev pd2
 K19 -- A RESTful Journey Skyward
 2021-11-23
-time spent: 1 hour -->
+time spent: 45 minutes -->
 
 <!DOCTYPE html>
 <html>
